--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,6 +203,7 @@ section {
     text-align: right;
 }
 
+/*reach out styles*/
 .contact {
     text-align: center;
     background: #024e76;
@@ -221,4 +222,17 @@ section {
     text-align: left;
     margin: 30px 0 0 60px;
     color: white;
+}
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+.contact-info a {
+    color: #fce138;
 }
