--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,19 +128,16 @@ section {
     font-size: 16px;
 }
 
-.intro {
-    text-align: center;
-}
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .steps div {
@@ -167,10 +164,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50px;
 }
 .primary-border {
     border-color: #fce138;
@@ -181,7 +179,7 @@ section {
 
 /*trainers section*/
 .trainers {
-    text-align: center;
+   
 }
 .trainer {
     width: 900px;
@@ -221,9 +219,12 @@ section {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 /*reach out styles*/
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
