added grid example

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,19 @@ section {
     display: flex;
 }
 
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
+
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
         /* this will be applied on any screen smaller than 980px */
