--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,46 +307,60 @@ section {
     display: flex;
 }
 
-.service-grid-container {
-    display: grid;
+
+
+
+/* SERVICE STYLES BEGIN */
+.services {
+    background: #fce138;
 }
+
+.service-grid-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+
+.service-grid-container {
+    background: lightyellow;
+    width: 80%;
+    display: grid;
+    /* repeat(iterator, size) */
+    grid-template-columns: 1fr repeat(2, 4fr);
+    grid-template-rows: repeat(5, 1fr) 2fr;
+    border: 2px solid #024e76;
+    color:  #024e76;
+    font-size: 1.2rem;
+  }
 
 .service-grid-item {
-    background-color: orange;
-    border: solid;
-    padding: 1em;
-    color: black;
+    padding: 15px 0;
+    border: 2px solid #024e76;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
-.service-grid-container {
-    max-width: 940px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 100px);
-    grid-gap: 10px;
+.service-grid-item.basic {
+    grid-column: 2 / span 1;
 }
 
-.box1 {
-    grid-column: 1/ span 1;
-    grid-row: 1/ span 2;
+.service-grid-item.both {
+    grid-column: 2 / span 2;
 }
 
-.box2 {
-    grid-column: 3/4;
-    grid-row: 1/-1;
+.service-grid-item.cancel {
+    writing-mode: vertical-lr;
+    grid-column: 1;
+    grid-row: 1 / -1;
+    transform: rotate(180deg);
 }
 
-.box3 {
-    grid-column: 2/ span 2;
-    grid-row: 3/ span 1;
+.grid-head, .grid-price, .service-grid-item.cancel {
+    font-size: 1.5rem;
+    font-weight: bold;
 }
-
-.grid-container {
-    place-items: <align-items> <justify-items>;
-}
-
-
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
@@ -397,6 +411,8 @@ section {
         }
 }
 
+
+
 /* MEDIA QUERY FOR TABLETS AND SMALLER */
 @media screen and (max-width: 768px) {
         /* this will be applied on any screen between 768px and 575 px */
@@ -424,6 +440,25 @@ section {
 
         .step-text {
             flex: 100%
+        }
+
+        .service-grid-container {
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .service-grid-item.basic {
+            grid-column: 1;
+        }
+
+        .service-grid-item.both {
+            grid-column: 1 / -1;
+        }
+
+        .service-grid-item.cancel {
+            transform: none;
+            writing-mode: unset;
+            grid-column: 1 / -1;
+            grid-row: -1;
         }
 
 }
