--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,23 @@
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body {
+body { 
     /* more on this crazy alphanumerical value in a minute!*/
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-family: Helvetica, Arial, sans-serif;
    }
 /* apply styles to <header> */
 header {
     padding: 20px 35px;
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
     margin: 0;
     display: flex;
     justify-content: space-between;
@@ -30,12 +36,12 @@ header h1 {
     font-weight: bold;
     margin: 0;
     font-size: 36px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 header a {
     text-decoration: none;
-    color: #fce138;
+    color: var(--primary-color);
 }
 header nav {
     margin: 7px 0;
@@ -55,14 +61,14 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #fce138;
+    background: var(--primary-color);
     color: #024e76;
     border-radius: 15px;
     text-shadow: none;
 }
 
 footer {
-    background: #fce138;
+    background: var(--primary-color);
     width: 100%;
     padding: 40px 35px;
     display: flex;
@@ -70,7 +76,7 @@ footer {
     flex-wrap: wrap;
 }
 footer h2 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 30px;
     margin: 0;
 }
@@ -79,7 +85,7 @@ footer div {
     text-align: right;
 }
 footer a {
-    color: #024e76;
+    color: var(--secondary-color);
 }
 section {
     padding: 60px;
@@ -108,15 +114,15 @@ section {
 .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color: #fce138;
+    color: var(--primary-color);
     text-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 
 .hero-form {
-    border: solid 3px #024e76;
+    border: solid 3px var(--secondary-color);
     background-color:rgba(252, 225, 56, 0.8);
     padding: 20px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 40%;
     margin: 3.5%;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
@@ -132,11 +138,11 @@ section {
 }
 
 .form-input {
-    border: 1px solid #024e76;
+    border: 1px solid var(--secondary-color);
     display: block;
     padding: 7px 15px;
     font-size: 16px;
-    color: #024e76;
+    color: var(--secondary-color);
     width: 100%;
     margin-bottom: 15px;
     border-radius: 10px;
@@ -153,8 +159,8 @@ section {
 }
 
 .hero-form button {
-    color: #fce138;
-    background-color: #024e76;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
     border: none;
     padding: 10px 20px;
     font-size: 16px;
@@ -162,12 +168,12 @@ section {
 }
 
 .hero-form button:hover {
-    background-color: #39a6b2;
+    background-color: var(--tertiary-color);
 }
 
 .intro p {
     line-height: 1.7;
-    color: #39a6b2;
+    color: var(--tertiary-color);
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
@@ -175,10 +181,10 @@ section {
 }
 
 .steps {
-    background: #fce138;
+    background: var(--primary-color);
 }
 .step h3 {
-    color: #024e76;
+    color: var(--secondary-color);
     font-size: 46px;
     flex: 1 30%;
 }
@@ -187,13 +193,13 @@ section {
     flex: 12;
 }
 .step-text p {
-    color: #39a6b2;
+    color: var(--tertiary-color);
     font-size: 18px;
 }
 .step-text h4 {
     font-size: 26px;
     line-height: 1.5;
-    color: #024e76;
+    color: var(--secondary-color);
 }
 
 .step {
@@ -229,7 +235,7 @@ section {
 
 .section-title {
     font-size: 48px;
-    color: #024e76;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding-bottom: 20px;
     text-align: center;
@@ -237,10 +243,10 @@ section {
     width: 50%;
 }
 .primary-border {
-    border-color: #fce138;
+    border-color: var(--primary-color)
 }
 .secondary-border {
-    border-color: #39a6b2
+    border-color: var(--tertiary-color)
 }
 
 /*trainers section*/
@@ -248,7 +254,7 @@ section {
 .trainer {
     margin: 20px;
     background: #024e76;
-    color: #fce138;
+    color: var(--primary-color);
     flex: 1;
 }
 .trainer img {
@@ -291,7 +297,7 @@ section {
     background: #024e76;
 }
 .contact h2 {
-    color: #fce138;
+    color: var(--primary-color);
 }
 .contact-info iframe {
     height: 400px;
@@ -300,7 +306,7 @@ section {
     color: white;
 }
 .contact-info h3 {
-    color: #fce138;
+    color: var(--primary-color);
     font-size: 32px;
 }
 .contact-info p, .contact-info address {
@@ -310,7 +316,7 @@ section {
     font-style: normal;
 }
 .contact-info a {
-    color: #fce138;
+    color: var(--primary-color);
 }
 .contact-info {
     display: flex;
@@ -343,7 +349,7 @@ section {
 .contact-form button {
     width: 100%;
     border: none;
-    background: #fce138;
+    background: var(--primary-color);
     color: #024e76;
     text-align: center;
     padding: 15px 0;
@@ -352,8 +358,8 @@ section {
 }
 
 .contact-form button:hover {
-    color: #fce138;
-    background: #39a6b2;
+    color: var(--primary-color);
+    background: var(--tertiary-color);
 }
 
 .flex-row {
@@ -363,7 +369,7 @@ section {
 
 /* SERVICE STYLES BEGIN */
 .services {
-    background: #fce138;
+    background: var(--primary-color);
 }
 
 .service-grid-wrapper {
