--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,20 +257,68 @@ section {
     color: var(--primary-color);
     flex: 1;
 }
-.trainer img {
+.trainer-img {
     width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
  }
+
+.trainer-img::after {
+    /* Gradient on imgs*/
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(252, 225, 56, 0.3), var(--secondary-color));
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
+.trainer-img h3 {
+    position: relative;
+    z-index: 100;
+    font-size: 28px;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: 0.5;
+}
+
+.trainer-img h4 {
+    position: relative;
+    z-index: 100;
+    font-size: 22px;
+    top: 200px;
+    transition-delay: 0.6;
+}
+
+.trainer:hover .trainer-img::after {
+    opacity: 1;
+    transition: 0.5;
+}
+
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0px;
+}
+
 .trainer-bio {
     padding: 25px;
     line-height: 1.3;
 }
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
 }
 .trainer-bio p {
     font-size: 17px;
@@ -479,6 +527,17 @@ section {
     content: "";
 }
 
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+}
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
@@ -579,6 +638,16 @@ section {
             grid-column: 1 / -1;
             grid-row: -1;
         }
+
+        .trainer-img h3, .trainer-img h4, .trainer-img::after {
+            display: none;
+            display: inline;
+        }
+
+        .trainer-bio h3, .trainer-bio h4 {
+            display: inline;
+        }
+
 
 }
 
